# apps/api/src/activity/activity.module.ts
@@ -1,0 +1,12 @@
+import { Module } from "@nestjs/common";
+import { DatabaseModule } from "../database/database.module";
+import { ActivityController } from "./activity.controller";
+import { ActivityService } from "./activity.service";
+
+@Module({
+  imports: [DatabaseModule],
+  controllers: [ActivityController],
+  providers: [ActivityService],
+  exports: [ActivityService],
+})
+export class ActivityModule {}
