# apps/api/src/tracks/tracks.module.ts
@@ -1,10 +1,11 @@
 import { Module } from "@nestjs/common";
 import { ResolverModule } from "../resolver/resolver.module";
+import { ActivityModule } from "../activity/activity.module";
 import { TracksController } from "./tracks.controller";
 import { TracksService } from "./tracks.service";
 
 @Module({
-  imports: [ResolverModule],
+  imports: [ResolverModule, ActivityModule],
   controllers: [TracksController],
   providers: [TracksService],
   exports: [TracksService],
