# packages/types/src/index.ts
@@ -2,3 +2,4 @@ export * from "./lyrics.js";
 export * from "./resolver.js";
 export * from "./track.js";
 export * from "./stream.js";
+export * from "./activity.js";
